tests/baselines/reference/contextualTypingWithFixedTypeParameters1.errors.txt
tests/cases/compiler/contextualTypingWithFixedTypeParameters1.ts(2,22): error TS2339: Property 'foo' does not exist on type 'string'.


==== tests/cases/compiler/contextualTypingWithFixedTypeParameters1.ts (1 errors) ====
    var f10: <T>(x: T, b: () => (a: T) => void, y: T) => T;
    f10('', () => a => a.foo, ''); // a is string
                         ~~~
!!! error TS2339: Property 'foo' does not exist on type 'string'.
    var r9 = f10('', () => (a => a.foo), 1); // error